// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SettingsSubsectionHeading /> > renders with contextMenu 1`] = `
{
  "container": <div>
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h2
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        test
      </h2>
      <a
        href="/#"
      >
        test
      </a>
    </div>
  </div>,
}
`;

exports[`<SettingsSubsectionHeading /> > renders without contextMenu 1`] = `
{
  "container": <div>
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h2
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        test
      </h2>
    </div>
  </div>,
}
`;
